[package]
name = "logging-component"
version = "0.1.0"
edition = "2021"
description = "Example WASI component that uses WASI-TLS for encrypted logging to Cloudflare D1"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.38.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.component]
package = "logging:component"
target = "wasm32-wasi-preview2"

[package.metadata.component.dependencies]
"wasi:tls" = { path = "wit/deps/tls" }

[package.metadata.component.target]
path = "wit/world.wit"