[package]
name = "wasi-tls-compliance-testing"
version = "0.1.0"
edition = "2021"
description = "RFC 8446 TLS 1.3 compliance testing for WASI-TLS"
license = "MIT OR Apache-2.0"

[lib]
name = "wasi_tls_compliance_testing"
path = "src/lib.rs"

[[bin]]
name = "compliance-test"
path = "src/bin/compliance_test.rs"

[dependencies]
# Core testing infrastructure
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }

# Real-world cryptographic testing
rcgen = "0.12"              # Certificate generation
x509-parser = "0.15"        # Certificate parsing
ring = "0.17"               # Cryptographic operations
rustls = "0.22"             # TLS implementation for comparison
webpki-roots = "0.25"       # Root CA certificates

# WIT and WASM tooling
wit-bindgen = "0.38.0"
wasmtime = "24.0"
wasi = "0.14.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[features]
default = ["compliance"]
compliance = []             # RFC compliance testing
integration = []            # End-to-end integration tests
performance = []            # Performance compliance testing