[package]
name = "wasi-tls-component-testing"
version = "0.1.0"
edition = "2021"
description = "WASM component testing for WASI-TLS - no system calls"
license = "MIT OR Apache-2.0"

[lib]
name = "wasi_tls_component_testing"
crate-type = ["cdylib"]     # For WASM compilation
path = "src/lib.rs"

[[bin]]
name = "component-test-runner"
path = "src/bin/component_test_runner.rs"

[dependencies]
# Core WASM-compatible dependencies only
wit-bindgen = { version = "0.38.0", default-features = false }
wasi = { version = "0.14.0", default-features = false }
anyhow = { version = "1.0", default-features = false }

# Pure Rust serialization (no I/O)
serde = { version = "1.0", features = ["derive"], default-features = false, features = ["alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# WASM-compatible logging (no filesystem)
log = { version = "0.4", default-features = false }

# Pure crypto operations (no system calls)
ring = { version = "0.17", default-features = false }
x509-parser = { version = "0.15", default-features = false, features = ["verify"] }

# WASM-compatible test data generation
arbitrary = { version = "1.0", features = ["derive"], default-features = false }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }  # WASM-compatible RNG

# Pure Rust utilities (no system calls)
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
# WASM test runner
wasm-bindgen-test = "0.3"

[workspace]
members = ["wit-validation", "unit-tests", "input-validation"]

[features]
default = ["wit-validation", "unit-tests"]
wit-validation = []     # WIT interface validation (pure logic)
unit-tests = []         # Component unit tests (pure functions)
input-validation = []   # Input boundary testing (safe)
property-testing = []   # Property-based testing (pure)

# WASM compilation target
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

# Component model support
[target.'cfg(target_arch = "wasm32")'.dependencies.wit-component]
version = "0.15.0"
default-features = false