[package]
name = "wasi-tls-security-validation"
version = "0.1.0"
edition = "2021"
description = "Public security validation for WASI-TLS - defensive testing only"
license = "MIT OR Apache-2.0"

[lib]
name = "wasi_tls_security_validation"
path = "src/lib.rs"

[[bin]]
name = "validate-security"
path = "src/bin/validate_security.rs"

[dependencies]
wit-bindgen = "0.38.0"
wasi = "0.14.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Safe cryptographic testing (no exploit generation)
rcgen = "0.12"              # Certificate generation for validation testing
x509-parser = "0.15"        # Certificate parsing validation

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

[features]
default = ["validation"]
validation = []               # Public validation features only
# Note: No fuzzing, exploit, or vulnerability research features